# artdlib-cpp

./: .gitignore  CMakeLists.txt  README.md  build-options.rb  rakefile.rb
artd-lib-logger/: .gitignore  CMakeBuild.raked  CMakeLists.txt  Logger.cpp  rakefile.rb
artd-lib-logger/include/artd/: Logger.h
